Bug 28044: Integrate Tor Launcher into tor-browser
Build and package Tor Launcher as part of the browser (similar to
how pdfjs is handled).

The --disable-tor-launcher build option may be used to omit Tor Launcher.

If a Tor Launcher extension is present in the user's profile, it is
removed.

--- a/old-configure.in
+++ b/old-configure.in
@@ -3209,10 +3209,21 @@ if test -n "$TOR_BROWSER_DATA_OUTSIDE_APP_DIR"; then
     AC_DEFINE(TOR_BROWSER_DATA_OUTSIDE_APP_DIR)
 fi
 
+MOZ_ARG_DISABLE_BOOL(tor-launcher,
+[  --disable-tor-launcher
+                          Do not include Tor Launcher],
+   TOR_BROWSER_DISABLE_TOR_LAUNCHER=1,
+   TOR_BROWSER_DISABLE_TOR_LAUNCHER=)
+
+if test -n "$TOR_BROWSER_DISABLE_TOR_LAUNCHER"; then
+    AC_DEFINE(TOR_BROWSER_DISABLE_TOR_LAUNCHER)
+fi
+
 AC_DEFINE_UNQUOTED(TOR_BROWSER_VERSION,"$TOR_BROWSER_VERSION")
 AC_SUBST(TOR_BROWSER_VERSION)
 AC_SUBST(TOR_BROWSER_UPDATE)
 AC_SUBST(TOR_BROWSER_DATA_OUTSIDE_APP_DIR)
+AC_SUBST(TOR_BROWSER_DISABLE_TOR_LAUNCHER)
 
 dnl ========================================================
 dnl parental controls (for Windows Vista)
