--- a/browser/installer/Makefile.in
+++ b/browser/installer/Makefile.in
@@ -90,6 +90,10 @@ ifdef TOR_BROWSER_UPDATE
 DEFINES += -DTOR_BROWSER_UPDATE
 endif
 
+ifdef TOR_BROWSER_DISABLE_TOR_BUTTON
+DEFINES += -DTOR_BROWSER_DISABLE_TOR_BUTTON
+endif
+
 ifneq (,$(filter WINNT Darwin Android,$(OS_TARGET)))
 DEFINES += -DMOZ_SHARED_MOZGLUE=1
 endif
