--- a/browser/installer/package-manifest.in
+++ b/browser/installer/package-manifest.in
@@ -592,6 +592,10 @@
 @RESPATH@/browser/chrome/browser.manifest
 @RESPATH@/browser/chrome/pdfjs.manifest
 @RESPATH@/browser/chrome/pdfjs/*
+#ifndef TOR_BROWSER_DISABLE_TOR_BUTTON
+@RESPATH@/chrome/torbutton.manifest
+@RESPATH@/chrome/torbutton/*
+#endif
 @RESPATH@/browser/extensions/{972ce4c6-7e08-4474-a285-3208198ce6fd}/chrome.manifest
 @RESPATH@/browser/extensions/{972ce4c6-7e08-4474-a285-3208198ce6fd}/install.rdf
 @RESPATH@/chrome/toolkit@JAREXT@
